// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DualListSelector basic 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-dual-list-selector"
    id="firstTest"
  >
    <div
      class="pf-v6-c-dual-list-selector__pane pf-m-available"
    >
      <div
        class="pf-v6-c-dual-list-selector__header"
      >
        <div
          class="pf-v6-c-dual-list-selector__title"
        >
          <div
            class="pf-v6-c-dual-list-selector__title-text"
          >
            Available options
          </div>
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__status"
      >
        <div
          class="pf-v6-c-dual-list-selector__status-text"
          id="firstTest-available-pane-status"
        >
          0 of 2 items selected
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__menu"
        tabindex="0"
      >
        <ul
          aria-activedescendant=""
          aria-labelledby="firstTest-available-pane-status"
          aria-multiselectable="true"
          class="pf-v6-c-dual-list-selector__list"
          role="listbox"
        >
          <li
            aria-selected="false"
            class="pf-v6-c-dual-list-selector__list-item"
            id="firstTest-available-pane-list-option-0"
            role="option"
            tabindex="-1"
          >
            <div
              class="pf-v6-c-dual-list-selector__list-item-row"
            >
              <span
                class="pf-v6-c-dual-list-selector__item"
              >
                <span
                  class="pf-v6-c-dual-list-selector__item-main"
                >
                  <span
                    class="pf-v6-c-dual-list-selector__item-text"
                  >
                    Option 1
                  </span>
                </span>
              </span>
            </div>
          </li>
          <li
            aria-selected="false"
            class="pf-v6-c-dual-list-selector__list-item"
            id="firstTest-available-pane-list-option-1"
            role="option"
            tabindex="-1"
          >
            <div
              class="pf-v6-c-dual-list-selector__list-item-row"
            >
              <span
                class="pf-v6-c-dual-list-selector__item"
              >
                <span
                  class="pf-v6-c-dual-list-selector__item-main"
                >
                  <span
                    class="pf-v6-c-dual-list-selector__item-text"
                  >
                    Option 2
                  </span>
                </span>
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      aria-label="Selector controls"
      class="pf-v6-c-dual-list-selector__controls"
      role="group"
      tabindex="0"
    >
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="true"
          aria-label="Add selected"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r5:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 20 20"
              width="1em"
            >
              <path
                d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="false"
          aria-label="Add all"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r6:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              width="1em"
            >
              <svg
                class="pf-v6-icon-default"
                viewBox="0 0 448 512"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
                />
              </svg>
              <svg
                class="pf-v6-icon-rh-ui"
                viewBox="0 0 32 32"
              >
                <path
                  d="M30.354 17.061 17.708 29.707a.997.997 0 0 1-1.414 0 .999.999 0 0 1 0-1.414L28.587 16 16.293 3.707a.999.999 0 1 1 1.414-1.414l12.646 12.646a1.501 1.501 0 0 1 0 2.121Zm-14-2.122L3.707 2.293a.999.999 0 1 0-1.414 1.414L14.586 16 2.293 28.293a.999.999 0 1 0 1.414 1.414l12.646-12.646a1.501 1.501 0 0 0 0-2.121Z"
                />
              </svg>
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="true"
          aria-label="Remove all"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r7:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 20 20"
              width="1em"
            >
              <path
                d="M10 19a.997.997 0 0 1-.707-.293l-7.647-7.646c-.283-.284-.439-.66-.439-1.061s.156-.777.44-1.06l7.646-7.647a1 1 0 1 1 1.414 1.414L3.414 10l7.293 7.293A1 1 0 0 1 10 19Zm8.707-.293a1 1 0 0 0 0-1.414L11.414 10l7.293-7.293a1 1 0 1 0-1.414-1.414L9.646 8.939c-.283.284-.439.66-.439 1.061s.156.777.44 1.06l7.646 7.647a.997.997 0 0 0 1.414 0Z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="true"
          aria-label="Remove selected"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r8:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 20 20"
              width="1em"
            >
              <path
                d="m6.41 10 7.29-7.29.02-.02c.38-.4.37-1.03-.02-1.41-.4-.38-1.03-.37-1.41.02L4.64 8.95a1.49 1.49 0 0 0 0 2.12l7.65 7.65c.19.19.44.29.71.29.27 0 .52-.11.71-.29a.996.996 0 0 0 0-1.41l-7.29-7.29Z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="pf-v6-c-dual-list-selector__pane pf-m-chosen"
    >
      <div
        class="pf-v6-c-dual-list-selector__header"
      >
        <div
          class="pf-v6-c-dual-list-selector__title"
        >
          <div
            class="pf-v6-c-dual-list-selector__title-text"
          >
            Chosen options
          </div>
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__status"
      >
        <div
          class="pf-v6-c-dual-list-selector__status-text"
          id="firstTest-chosen-pane-status"
        >
          0 of 0 items selected
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__menu"
        tabindex="0"
      >
        <ul
          class="pf-v6-c-dual-list-selector__list"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DualListSelector basic with disabled controls 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-dual-list-selector"
    id="disabledTest"
  >
    <div
      class="pf-v6-c-dual-list-selector__pane pf-m-available"
    >
      <div
        class="pf-v6-c-dual-list-selector__header"
      >
        <div
          class="pf-v6-c-dual-list-selector__title"
        >
          <div
            class="pf-v6-c-dual-list-selector__title-text"
          >
            Available options
          </div>
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__status"
      >
        <div
          class="pf-v6-c-dual-list-selector__status-text"
          id="disabledTest-available-pane-status"
        >
          0 of 2 items selected
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__menu"
        tabindex="0"
      >
        <ul
          aria-activedescendant=""
          aria-disabled="true"
          aria-labelledby="disabledTest-available-pane-status"
          aria-multiselectable="true"
          class="pf-v6-c-dual-list-selector__list"
          role="listbox"
        >
          <li
            aria-selected="false"
            class="pf-v6-c-dual-list-selector__list-item pf-m-disabled"
            id="disabledTest-available-pane-list-option-0"
            role="option"
            tabindex="-1"
          >
            <div
              class="pf-v6-c-dual-list-selector__list-item-row"
            >
              <span
                class="pf-v6-c-dual-list-selector__item"
              >
                <span
                  class="pf-v6-c-dual-list-selector__item-main"
                >
                  <span
                    class="pf-v6-c-dual-list-selector__item-text"
                  >
                    Option 1
                  </span>
                </span>
              </span>
            </div>
          </li>
          <li
            aria-selected="false"
            class="pf-v6-c-dual-list-selector__list-item pf-m-disabled"
            id="disabledTest-available-pane-list-option-1"
            role="option"
            tabindex="-1"
          >
            <div
              class="pf-v6-c-dual-list-selector__list-item-row"
            >
              <span
                class="pf-v6-c-dual-list-selector__item"
              >
                <span
                  class="pf-v6-c-dual-list-selector__item-main"
                >
                  <span
                    class="pf-v6-c-dual-list-selector__item-text"
                  >
                    Option 2
                  </span>
                </span>
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      aria-label="Selector controls"
      class="pf-v6-c-dual-list-selector__controls"
      role="group"
      tabindex="0"
    >
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="true"
          aria-label="Add selected"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r16:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 20 20"
              width="1em"
            >
              <path
                d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="true"
          aria-label="Add all"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r17:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              width="1em"
            >
              <svg
                class="pf-v6-icon-default"
                viewBox="0 0 448 512"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
                />
              </svg>
              <svg
                class="pf-v6-icon-rh-ui"
                viewBox="0 0 32 32"
              >
                <path
                  d="M30.354 17.061 17.708 29.707a.997.997 0 0 1-1.414 0 .999.999 0 0 1 0-1.414L28.587 16 16.293 3.707a.999.999 0 1 1 1.414-1.414l12.646 12.646a1.501 1.501 0 0 1 0 2.121Zm-14-2.122L3.707 2.293a.999.999 0 1 0-1.414 1.414L14.586 16 2.293 28.293a.999.999 0 1 0 1.414 1.414l12.646-12.646a1.501 1.501 0 0 0 0-2.121Z"
                />
              </svg>
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="true"
          aria-label="Remove all"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r18:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 20 20"
              width="1em"
            >
              <path
                d="M10 19a.997.997 0 0 1-.707-.293l-7.647-7.646c-.283-.284-.439-.66-.439-1.061s.156-.777.44-1.06l7.646-7.647a1 1 0 1 1 1.414 1.414L3.414 10l7.293 7.293A1 1 0 0 1 10 19Zm8.707-.293a1 1 0 0 0 0-1.414L11.414 10l7.293-7.293a1 1 0 1 0-1.414-1.414L9.646 8.939c-.283.284-.439.66-.439 1.061s.156.777.44 1.06l7.646 7.647a.997.997 0 0 0 1.414 0Z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="true"
          aria-label="Remove selected"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r19:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 20 20"
              width="1em"
            >
              <path
                d="m6.41 10 7.29-7.29.02-.02c.38-.4.37-1.03-.02-1.41-.4-.38-1.03-.37-1.41.02L4.64 8.95a1.49 1.49 0 0 0 0 2.12l7.65 7.65c.19.19.44.29.71.29.27 0 .52-.11.71-.29a.996.996 0 0 0 0-1.41l-7.29-7.29Z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="pf-v6-c-dual-list-selector__pane pf-m-chosen"
    >
      <div
        class="pf-v6-c-dual-list-selector__header"
      >
        <div
          class="pf-v6-c-dual-list-selector__title"
        >
          <div
            class="pf-v6-c-dual-list-selector__title-text"
          >
            Chosen options
          </div>
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__status"
      >
        <div
          class="pf-v6-c-dual-list-selector__status-text"
          id="disabledTest-chosen-pane-status"
        >
          0 of 0 items selected
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__menu"
        tabindex="0"
      >
        <ul
          aria-disabled="true"
          class="pf-v6-c-dual-list-selector__list"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DualListSelector with actions 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-dual-list-selector"
    id="fourthTest"
  >
    <div
      class="pf-v6-c-dual-list-selector__pane pf-m-available"
    >
      <div
        class="pf-v6-c-dual-list-selector__header"
      >
        <div
          class="pf-v6-c-dual-list-selector__title"
        >
          <div
            class="pf-v6-c-dual-list-selector__title-text"
          >
            Available options
          </div>
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__tools"
      >
        <div
          class="pf-v6-c-dual-list-selector__tools-actions"
        >
          <span>
            TestNode1
          </span>
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__status"
      >
        <div
          class="pf-v6-c-dual-list-selector__status-text"
          id="fourthTest-available-pane-status"
        >
          0 of 2 items selected
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__menu"
        tabindex="0"
      >
        <ul
          aria-activedescendant=""
          aria-labelledby="fourthTest-available-pane-status"
          aria-multiselectable="true"
          class="pf-v6-c-dual-list-selector__list"
          role="listbox"
        >
          <li
            aria-selected="false"
            class="pf-v6-c-dual-list-selector__list-item"
            id="fourthTest-available-pane-list-option-0"
            role="option"
            tabindex="-1"
          >
            <div
              class="pf-v6-c-dual-list-selector__list-item-row"
            >
              <span
                class="pf-v6-c-dual-list-selector__item"
              >
                <span
                  class="pf-v6-c-dual-list-selector__item-main"
                >
                  <span
                    class="pf-v6-c-dual-list-selector__item-text"
                  >
                    Option 1
                  </span>
                </span>
              </span>
            </div>
          </li>
          <li
            aria-selected="false"
            class="pf-v6-c-dual-list-selector__list-item"
            id="fourthTest-available-pane-list-option-1"
            role="option"
            tabindex="-1"
          >
            <div
              class="pf-v6-c-dual-list-selector__list-item-row"
            >
              <span
                class="pf-v6-c-dual-list-selector__item"
              >
                <span
                  class="pf-v6-c-dual-list-selector__item-main"
                >
                  <span
                    class="pf-v6-c-dual-list-selector__item-text"
                  >
                    Option 2
                  </span>
                </span>
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      aria-label="Selector controls"
      class="pf-v6-c-dual-list-selector__controls"
      role="group"
      tabindex="0"
    >
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="true"
          aria-label="Add selected"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r1q:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 20 20"
              width="1em"
            >
              <path
                d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="false"
          aria-label="Add all"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r1r:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              width="1em"
            >
              <svg
                class="pf-v6-icon-default"
                viewBox="0 0 448 512"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
                />
              </svg>
              <svg
                class="pf-v6-icon-rh-ui"
                viewBox="0 0 32 32"
              >
                <path
                  d="M30.354 17.061 17.708 29.707a.997.997 0 0 1-1.414 0 .999.999 0 0 1 0-1.414L28.587 16 16.293 3.707a.999.999 0 1 1 1.414-1.414l12.646 12.646a1.501 1.501 0 0 1 0 2.121Zm-14-2.122L3.707 2.293a.999.999 0 1 0-1.414 1.414L14.586 16 2.293 28.293a.999.999 0 1 0 1.414 1.414l12.646-12.646a1.501 1.501 0 0 0 0-2.121Z"
                />
              </svg>
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="false"
          aria-label="Remove all"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r1s:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 20 20"
              width="1em"
            >
              <path
                d="M10 19a.997.997 0 0 1-.707-.293l-7.647-7.646c-.283-.284-.439-.66-.439-1.061s.156-.777.44-1.06l7.646-7.647a1 1 0 1 1 1.414 1.414L3.414 10l7.293 7.293A1 1 0 0 1 10 19Zm8.707-.293a1 1 0 0 0 0-1.414L11.414 10l7.293-7.293a1 1 0 1 0-1.414-1.414L9.646 8.939c-.283.284-.439.66-.439 1.061s.156.777.44 1.06l7.646 7.647a.997.997 0 0 0 1.414 0Z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="true"
          aria-label="Remove selected"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r1t:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 20 20"
              width="1em"
            >
              <path
                d="m6.41 10 7.29-7.29.02-.02c.38-.4.37-1.03-.02-1.41-.4-.38-1.03-.37-1.41.02L4.64 8.95a1.49 1.49 0 0 0 0 2.12l7.65 7.65c.19.19.44.29.71.29.27 0 .52-.11.71-.29a.996.996 0 0 0 0-1.41l-7.29-7.29Z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="pf-v6-c-dual-list-selector__pane pf-m-chosen"
    >
      <div
        class="pf-v6-c-dual-list-selector__header"
      >
        <div
          class="pf-v6-c-dual-list-selector__title"
        >
          <div
            class="pf-v6-c-dual-list-selector__title-text"
          >
            Chosen options
          </div>
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__tools"
      >
        <div
          class="pf-v6-c-dual-list-selector__tools-actions"
        >
          <span>
            TestNode2
          </span>
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__status"
      >
        <div
          class="pf-v6-c-dual-list-selector__status-text"
          id="fourthTest-chosen-pane-status"
        >
          0 of 2 items selected
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__menu"
        tabindex="0"
      >
        <ul
          aria-activedescendant=""
          aria-labelledby="fourthTest-chosen-pane-status"
          aria-multiselectable="true"
          class="pf-v6-c-dual-list-selector__list"
          role="listbox"
        >
          <li
            aria-selected="false"
            class="pf-v6-c-dual-list-selector__list-item"
            id="fourthTest-chosen-pane-list-option-0"
            role="option"
            tabindex="-1"
          >
            <div
              class="pf-v6-c-dual-list-selector__list-item-row"
            >
              <span
                class="pf-v6-c-dual-list-selector__item"
              >
                <span
                  class="pf-v6-c-dual-list-selector__item-main"
                >
                  <span
                    class="pf-v6-c-dual-list-selector__item-text"
                  >
                    Option 3
                  </span>
                </span>
              </span>
            </div>
          </li>
          <li
            aria-selected="false"
            class="pf-v6-c-dual-list-selector__list-item"
            id="fourthTest-chosen-pane-list-option-1"
            role="option"
            tabindex="-1"
          >
            <div
              class="pf-v6-c-dual-list-selector__list-item-row"
            >
              <span
                class="pf-v6-c-dual-list-selector__item"
              >
                <span
                  class="pf-v6-c-dual-list-selector__item-main"
                >
                  <span
                    class="pf-v6-c-dual-list-selector__item-text"
                  >
                    Option 4
                  </span>
                </span>
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DualListSelector with custom status 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-dual-list-selector"
    id="thirdTest"
  >
    <div
      class="pf-v6-c-dual-list-selector__pane pf-m-available"
    >
      <div
        class="pf-v6-c-dual-list-selector__header"
      >
        <div
          class="pf-v6-c-dual-list-selector__title"
        >
          <div
            class="pf-v6-c-dual-list-selector__title-text"
          >
            Available options
          </div>
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__status"
      >
        <div
          class="pf-v6-c-dual-list-selector__status-text"
          id="thirdTest-available-pane-status"
        >
          Test status1
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__menu"
        tabindex="0"
      >
        <ul
          aria-activedescendant=""
          aria-labelledby="thirdTest-available-pane-status"
          aria-multiselectable="true"
          class="pf-v6-c-dual-list-selector__list"
          role="listbox"
        >
          <li
            aria-selected="false"
            class="pf-v6-c-dual-list-selector__list-item"
            id="thirdTest-available-pane-list-option-0"
            role="option"
            tabindex="-1"
          >
            <div
              class="pf-v6-c-dual-list-selector__list-item-row"
            >
              <span
                class="pf-v6-c-dual-list-selector__item"
              >
                <span
                  class="pf-v6-c-dual-list-selector__item-main"
                >
                  <span
                    class="pf-v6-c-dual-list-selector__item-text"
                  >
                    Option 1
                  </span>
                </span>
              </span>
            </div>
          </li>
          <li
            aria-selected="false"
            class="pf-v6-c-dual-list-selector__list-item"
            id="thirdTest-available-pane-list-option-1"
            role="option"
            tabindex="-1"
          >
            <div
              class="pf-v6-c-dual-list-selector__list-item-row"
            >
              <span
                class="pf-v6-c-dual-list-selector__item"
              >
                <span
                  class="pf-v6-c-dual-list-selector__item-main"
                >
                  <span
                    class="pf-v6-c-dual-list-selector__item-text"
                  >
                    Option 2
                  </span>
                </span>
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      aria-label="Selector controls"
      class="pf-v6-c-dual-list-selector__controls"
      role="group"
      tabindex="0"
    >
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="true"
          aria-label="Add selected"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:rr:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 20 20"
              width="1em"
            >
              <path
                d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="false"
          aria-label="Add all"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:rs:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              width="1em"
            >
              <svg
                class="pf-v6-icon-default"
                viewBox="0 0 448 512"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
                />
              </svg>
              <svg
                class="pf-v6-icon-rh-ui"
                viewBox="0 0 32 32"
              >
                <path
                  d="M30.354 17.061 17.708 29.707a.997.997 0 0 1-1.414 0 .999.999 0 0 1 0-1.414L28.587 16 16.293 3.707a.999.999 0 1 1 1.414-1.414l12.646 12.646a1.501 1.501 0 0 1 0 2.121Zm-14-2.122L3.707 2.293a.999.999 0 1 0-1.414 1.414L14.586 16 2.293 28.293a.999.999 0 1 0 1.414 1.414l12.646-12.646a1.501 1.501 0 0 0 0-2.121Z"
                />
              </svg>
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="true"
          aria-label="Remove all"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:rt:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 20 20"
              width="1em"
            >
              <path
                d="M10 19a.997.997 0 0 1-.707-.293l-7.647-7.646c-.283-.284-.439-.66-.439-1.061s.156-.777.44-1.06l7.646-7.647a1 1 0 1 1 1.414 1.414L3.414 10l7.293 7.293A1 1 0 0 1 10 19Zm8.707-.293a1 1 0 0 0 0-1.414L11.414 10l7.293-7.293a1 1 0 1 0-1.414-1.414L9.646 8.939c-.283.284-.439.66-.439 1.061s.156.777.44 1.06l7.646 7.647a.997.997 0 0 0 1.414 0Z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="true"
          aria-label="Remove selected"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:ru:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 20 20"
              width="1em"
            >
              <path
                d="m6.41 10 7.29-7.29.02-.02c.38-.4.37-1.03-.02-1.41-.4-.38-1.03-.37-1.41.02L4.64 8.95a1.49 1.49 0 0 0 0 2.12l7.65 7.65c.19.19.44.29.71.29.27 0 .52-.11.71-.29a.996.996 0 0 0 0-1.41l-7.29-7.29Z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="pf-v6-c-dual-list-selector__pane pf-m-chosen"
    >
      <div
        class="pf-v6-c-dual-list-selector__header"
      >
        <div
          class="pf-v6-c-dual-list-selector__title"
        >
          <div
            class="pf-v6-c-dual-list-selector__title-text"
          >
            Chosen options
          </div>
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__status"
      >
        <div
          class="pf-v6-c-dual-list-selector__status-text"
          id="thirdTest-chosen-pane-status"
        >
          Test status2
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__menu"
        tabindex="0"
      >
        <ul
          class="pf-v6-c-dual-list-selector__list"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DualListSelector with search inputs 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-dual-list-selector"
    id="secondTest"
  >
    <div
      class="pf-v6-c-dual-list-selector__pane pf-m-available"
    >
      <div
        class="pf-v6-c-dual-list-selector__header"
      >
        <div
          class="pf-v6-c-dual-list-selector__title"
        >
          <div
            class="pf-v6-c-dual-list-selector__title-text"
          >
            Available options
          </div>
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__tools"
      >
        <div
          class="pf-v6-c-dual-list-selector__tools-filter"
        >
          <div
            class="pf-v6-c-text-input-group"
          >
            <div
              class="pf-v6-c-text-input-group__main pf-m-icon"
            >
              <span
                class="pf-v6-c-text-input-group__text"
              >
                <span
                  class="pf-v6-c-text-input-group__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v6-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 20 20"
                    width="1em"
                  >
                    <path
                      d="m18.8 17.21-4.41-4.41A7.906 7.906 0 0 0 16 8c0-4.41-3.59-8-8-8S0 3.59 0 8s3.59 8 8 8c1.73 0 3.42-.57 4.8-1.61l4.41 4.41c.44.44 1.15.44 1.59 0 .44-.44.44-1.15 0-1.59ZM8 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6Z"
                    />
                  </svg>
                </span>
                <input
                  aria-label="Available search input"
                  class="pf-v6-c-text-input-group__text-input"
                  type="text"
                  value=""
                />
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__status"
      >
        <div
          class="pf-v6-c-dual-list-selector__status-text"
          id="secondTest-available-pane-status"
        >
          0 of 2 items selected
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__menu"
        tabindex="0"
      >
        <ul
          aria-activedescendant=""
          aria-labelledby="secondTest-available-pane-status"
          aria-multiselectable="true"
          class="pf-v6-c-dual-list-selector__list"
          role="listbox"
        >
          <li
            aria-selected="false"
            class="pf-v6-c-dual-list-selector__list-item"
            id="secondTest-available-pane-list-option-0"
            role="option"
            tabindex="-1"
          >
            <div
              class="pf-v6-c-dual-list-selector__list-item-row"
            >
              <span
                class="pf-v6-c-dual-list-selector__item"
              >
                <span
                  class="pf-v6-c-dual-list-selector__item-main"
                >
                  <span
                    class="pf-v6-c-dual-list-selector__item-text"
                  >
                    Option 1
                  </span>
                </span>
              </span>
            </div>
          </li>
          <li
            aria-selected="false"
            class="pf-v6-c-dual-list-selector__list-item"
            id="secondTest-available-pane-list-option-1"
            role="option"
            tabindex="-1"
          >
            <div
              class="pf-v6-c-dual-list-selector__list-item-row"
            >
              <span
                class="pf-v6-c-dual-list-selector__item"
              >
                <span
                  class="pf-v6-c-dual-list-selector__item-main"
                >
                  <span
                    class="pf-v6-c-dual-list-selector__item-text"
                  >
                    Option 2
                  </span>
                </span>
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      aria-label="Selector controls"
      class="pf-v6-c-dual-list-selector__controls"
      role="group"
      tabindex="0"
    >
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="true"
          aria-label="Add selected"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:rg:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 20 20"
              width="1em"
            >
              <path
                d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="false"
          aria-label="Add all"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:rh:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              width="1em"
            >
              <svg
                class="pf-v6-icon-default"
                viewBox="0 0 448 512"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
                />
              </svg>
              <svg
                class="pf-v6-icon-rh-ui"
                viewBox="0 0 32 32"
              >
                <path
                  d="M30.354 17.061 17.708 29.707a.997.997 0 0 1-1.414 0 .999.999 0 0 1 0-1.414L28.587 16 16.293 3.707a.999.999 0 1 1 1.414-1.414l12.646 12.646a1.501 1.501 0 0 1 0 2.121Zm-14-2.122L3.707 2.293a.999.999 0 1 0-1.414 1.414L14.586 16 2.293 28.293a.999.999 0 1 0 1.414 1.414l12.646-12.646a1.501 1.501 0 0 0 0-2.121Z"
                />
              </svg>
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="true"
          aria-label="Remove all"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:ri:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 20 20"
              width="1em"
            >
              <path
                d="M10 19a.997.997 0 0 1-.707-.293l-7.647-7.646c-.283-.284-.439-.66-.439-1.061s.156-.777.44-1.06l7.646-7.647a1 1 0 1 1 1.414 1.414L3.414 10l7.293 7.293A1 1 0 0 1 10 19Zm8.707-.293a1 1 0 0 0 0-1.414L11.414 10l7.293-7.293a1 1 0 1 0-1.414-1.414L9.646 8.939c-.283.284-.439.66-.439 1.061s.156.777.44 1.06l7.646 7.647a.997.997 0 0 0 1.414 0Z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="true"
          aria-label="Remove selected"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:rj:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 20 20"
              width="1em"
            >
              <path
                d="m6.41 10 7.29-7.29.02-.02c.38-.4.37-1.03-.02-1.41-.4-.38-1.03-.37-1.41.02L4.64 8.95a1.49 1.49 0 0 0 0 2.12l7.65 7.65c.19.19.44.29.71.29.27 0 .52-.11.71-.29a.996.996 0 0 0 0-1.41l-7.29-7.29Z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="pf-v6-c-dual-list-selector__pane pf-m-chosen"
    >
      <div
        class="pf-v6-c-dual-list-selector__header"
      >
        <div
          class="pf-v6-c-dual-list-selector__title"
        >
          <div
            class="pf-v6-c-dual-list-selector__title-text"
          >
            Chosen options
          </div>
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__tools"
      >
        <div
          class="pf-v6-c-dual-list-selector__tools-filter"
        >
          <div
            class="pf-v6-c-text-input-group"
          >
            <div
              class="pf-v6-c-text-input-group__main pf-m-icon"
            >
              <span
                class="pf-v6-c-text-input-group__text"
              >
                <span
                  class="pf-v6-c-text-input-group__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v6-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 20 20"
                    width="1em"
                  >
                    <path
                      d="m18.8 17.21-4.41-4.41A7.906 7.906 0 0 0 16 8c0-4.41-3.59-8-8-8S0 3.59 0 8s3.59 8 8 8c1.73 0 3.42-.57 4.8-1.61l4.41 4.41c.44.44 1.15.44 1.59 0 .44-.44.44-1.15 0-1.59ZM8 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6Z"
                    />
                  </svg>
                </span>
                <input
                  aria-label="Chosen search input"
                  class="pf-v6-c-text-input-group__text-input"
                  type="text"
                  value=""
                />
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__status"
      >
        <div
          class="pf-v6-c-dual-list-selector__status-text"
          id="secondTest-chosen-pane-status"
        >
          0 of 0 items selected
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__menu"
        tabindex="0"
      >
        <ul
          class="pf-v6-c-dual-list-selector__list"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DualListSelector with tree 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-dual-list-selector"
    id="tree-test"
  >
    <div
      class="pf-v6-c-dual-list-selector__pane pf-m-available"
    >
      <div
        class="pf-v6-c-dual-list-selector__header"
      >
        <div
          class="pf-v6-c-dual-list-selector__title"
        >
          <div
            class="pf-v6-c-dual-list-selector__title-text"
          >
            Available options
          </div>
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__status"
      >
        <div
          class="pf-v6-c-dual-list-selector__status-text"
          id="tree-test-available-pane-status"
        >
          Test status1
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__menu"
        tabindex="0"
      >
        <ul
          aria-activedescendant=""
          aria-labelledby="tree-test-available-pane-status"
          aria-multiselectable="true"
          class="pf-v6-c-dual-list-selector__list"
          role="tree"
        >
          <li
            aria-expanded="true"
            aria-selected="false"
            class="pf-v6-c-dual-list-selector__list-item pf-m-expandable pf-m-expanded"
            id="O1"
            role="treeitem"
          >
            <div
              class="pf-v6-c-dual-list-selector__list-item-row pf-m-check"
            >
              <div
                class="pf-v6-c-dual-list-selector__item"
                tabindex="-1"
              >
                <span
                  class="pf-v6-c-dual-list-selector__item-main"
                >
                  <div
                    class="pf-v6-c-dual-list-selector__item-toggle"
                    tabindex="-1"
                  >
                    <span
                      class="pf-v6-c-dual-list-selector__item-toggle-icon"
                    >
                      <svg
                        aria-hidden="true"
                        class="pf-v6-svg"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        viewBox="0 0 20 20"
                        width="1em"
                      >
                        <path
                          d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
                        />
                      </svg>
                    </span>
                  </div>
                  <span
                    class="pf-v6-c-dual-list-selector__item-check"
                  >
                    <input
                      tabindex="-1"
                      type="checkbox"
                    />
                  </span>
                  <span
                    class="pf-v6-c-dual-list-selector__item-text"
                  >
                    Opt1
                  </span>
                </span>
              </div>
            </div>
            <ul
              class="pf-v6-c-dual-list-selector__list"
              role="group"
            >
              <li
                aria-selected="false"
                class="pf-v6-c-dual-list-selector__list-item"
                id="O3"
                role="treeitem"
              >
                <div
                  class="pf-v6-c-dual-list-selector__list-item-row pf-m-check"
                >
                  <div
                    class="pf-v6-c-dual-list-selector__item"
                    tabindex="-1"
                  >
                    <span
                      class="pf-v6-c-dual-list-selector__item-main"
                    >
                      <span
                        class="pf-v6-c-dual-list-selector__item-check"
                      >
                        <input
                          tabindex="-1"
                          type="checkbox"
                        />
                      </span>
                      <span
                        class="pf-v6-c-dual-list-selector__item-text"
                      >
                        Opt3
                      </span>
                    </span>
                  </div>
                </div>
              </li>
            </ul>
          </li>
          <li
            aria-selected="false"
            class="pf-v6-c-dual-list-selector__list-item"
            id="O2"
            role="treeitem"
          >
            <div
              class="pf-v6-c-dual-list-selector__list-item-row pf-m-check"
            >
              <div
                class="pf-v6-c-dual-list-selector__item"
                tabindex="-1"
              >
                <span
                  class="pf-v6-c-dual-list-selector__item-main"
                >
                  <span
                    class="pf-v6-c-dual-list-selector__item-check"
                  >
                    <input
                      tabindex="-1"
                      type="checkbox"
                    />
                  </span>
                  <span
                    class="pf-v6-c-dual-list-selector__item-text"
                  >
                    Opt2
                  </span>
                </span>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      aria-label="Selector controls"
      class="pf-v6-c-dual-list-selector__controls"
      role="group"
      tabindex="0"
    >
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="true"
          aria-label="Add selected"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r1f:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 20 20"
              width="1em"
            >
              <path
                d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="false"
          aria-label="Add all"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r1g:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              width="1em"
            >
              <svg
                class="pf-v6-icon-default"
                viewBox="0 0 448 512"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
                />
              </svg>
              <svg
                class="pf-v6-icon-rh-ui"
                viewBox="0 0 32 32"
              >
                <path
                  d="M30.354 17.061 17.708 29.707a.997.997 0 0 1-1.414 0 .999.999 0 0 1 0-1.414L28.587 16 16.293 3.707a.999.999 0 1 1 1.414-1.414l12.646 12.646a1.501 1.501 0 0 1 0 2.121Zm-14-2.122L3.707 2.293a.999.999 0 1 0-1.414 1.414L14.586 16 2.293 28.293a.999.999 0 1 0 1.414 1.414l12.646-12.646a1.501 1.501 0 0 0 0-2.121Z"
                />
              </svg>
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="true"
          aria-label="Remove all"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r1h:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 20 20"
              width="1em"
            >
              <path
                d="M10 19a.997.997 0 0 1-.707-.293l-7.647-7.646c-.283-.284-.439-.66-.439-1.061s.156-.777.44-1.06l7.646-7.647a1 1 0 1 1 1.414 1.414L3.414 10l7.293 7.293A1 1 0 0 1 10 19Zm8.707-.293a1 1 0 0 0 0-1.414L11.414 10l7.293-7.293a1 1 0 1 0-1.414-1.414L9.646 8.939c-.283.284-.439.66-.439 1.061s.156.777.44 1.06l7.646 7.647a.997.997 0 0 0 1.414 0Z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__controls-item"
      >
        <button
          aria-disabled="true"
          aria-label="Remove selected"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r1i:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-button__text"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 20 20"
              width="1em"
            >
              <path
                d="m6.41 10 7.29-7.29.02-.02c.38-.4.37-1.03-.02-1.41-.4-.38-1.03-.37-1.41.02L4.64 8.95a1.49 1.49 0 0 0 0 2.12l7.65 7.65c.19.19.44.29.71.29.27 0 .52-.11.71-.29a.996.996 0 0 0 0-1.41l-7.29-7.29Z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="pf-v6-c-dual-list-selector__pane pf-m-chosen"
    >
      <div
        class="pf-v6-c-dual-list-selector__header"
      >
        <div
          class="pf-v6-c-dual-list-selector__title"
        >
          <div
            class="pf-v6-c-dual-list-selector__title-text"
          >
            Chosen options
          </div>
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__status"
      >
        <div
          class="pf-v6-c-dual-list-selector__status-text"
          id="tree-test-chosen-pane-status"
        >
          Test status2
        </div>
      </div>
      <div
        class="pf-v6-c-dual-list-selector__menu"
        tabindex="0"
      >
        <ul
          class="pf-v6-c-dual-list-selector__list"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
